--- a/backtobasics.htm
+++ b/backtobasics.htm
@@ -68,5 +68,6 @@
   <!--[if IE 9]>
     <p>greeeeeeat</p>
   <![endif]-->
+<p>All of this has been come from <a href="http://www.w3chools.com">W3Schools</a></p>
 </body>
 </html>
